Kubernetes/first_try/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-container
        image: ghcr.io/daocloud/dao-2048-nginx:v1.4.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
