Kubernetes/first_try/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP 
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 80
